--- a/apps/front/src/app/create/study-set/create-study-set.component.html
+++ b/apps/front/src/app/create/study-set/create-study-set.component.html
@@ -2,13 +2,16 @@
   <div class="py-4">
     <div class="create-header d-flex justify-content-between text-nowrap">
       <h2>
-        Create a new study set
-        <a href="/handbook/usage/creating-sets#creating-manually" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5"></fa-icon></a>
+        <fa-icon [icon]="faSquarePlus"></fa-icon>
+        Create a study set
       </h2>
-      <button type="submit" class="btn btn-primary" (click)="createSet()">
-        <span [hidden]="!formDisabled" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-        Create
-      </button>
+      <div>
+        <a href="/handbook/usage/creating-sets#creating-manually" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5 me-2"></fa-icon></a>
+        <button type="submit" class="btn btn-primary" (click)="createSet()">
+          <span [hidden]="!formDisabled" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Create
+        </button>
+      </div>
     </div>
     <div class="create-header">
       <p class="text-secondary">Your progress will be saved, even if you reload or close the browser.</p>
