--- a/apps/front/src/app/folder/folder.component.html
+++ b/apps/front/src/app/folder/folder.component.html
@@ -4,26 +4,21 @@
   </div>
 </div>
 
-<div class="py-4 sets" hidden #container>
-  <div>
-    <div class="d-flex header">
+<div class="py-4 mx-md-5 mx-2" [hidden]="loading" #container>
+  <h1 *ngIf="folder" class="fs-2">
+    <fa-icon [icon]="faFolder" [ngStyle]="{'color': folder.color}"></fa-icon>
+    {{folder.name}}
+  </h1>
+  <div class="mt-5">
+    <div class="d-flex">
       <h2>
-        <fa-icon class="fs-3" [icon]="faFolder"></fa-icon>
-        Your folders
+        <fa-icon class="fs-3" [icon]="faFolderTree"></fa-icon>
+        Subfolders
       </h2>
     </div>
-    <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100" *ngIf="user">
-      <div class="col-md-3" [routerLink]="['/create/folder']">
-        <div class="card shadow-sm set-card h-100" role="button">
-          <div class="card-body d-flex justify-content-center">
-            <p class="fs-5 mt-2 d-flex align-items-center">
-              <fa-icon class="fs-3" [icon]="faPlus"></fa-icon>
-              <span class="ms-1">Create new folder</span>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3" *ngFor="let folder of user.folders">
+    <p class="text-secondary my-3" *ngIf="subfolders && subfolders.length === 0">There are no subfolders in this folder.</p>
+    <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100" *ngIf="subfolders && subfolders.length > 0">
+      <div class="col-md-3" *ngFor="let folder of subfolders">
         <div class="card shadow-sm set-card h-100" [routerLink]="['/folder', folder.id]" role="button">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">{{ folder.name }}</h5>
@@ -35,24 +30,15 @@
   </div>
   <hr class="me-4">
   <div class="mt-4">
-    <div class="d-flex header">
+    <div class="d-flex">
       <h2>
         <fa-icon class="fs-3" [icon]="faClone"></fa-icon>
-        Your sets
+        Sets
       </h2>
     </div>
-    <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100" *ngIf="user">
-      <div class="col-md-3" [routerLink]="['/create/set']">
-        <div class="card shadow-sm set-card h-100" role="button">
-          <div class="card-body d-flex justify-content-center">
-            <p class="fs-5 mt-2 d-flex align-items-center">
-              <fa-icon class="fs-3" [icon]="faPlus"></fa-icon>
-              <span class="ms-1">Create new set</span>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3" *ngFor="let set of user.sets">
+    <p class="text-secondary my-3" *ngIf="sets && sets.length === 0">There are no sets in this folder.</p>
+    <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-4" *ngIf="sets && sets.length > 0">
+      <div class="col-md-3" *ngFor="let set of sets">
         <div class="card shadow-sm set-card h-100" [routerLink]="['/study-set', set.id]" role="button">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">
