--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -78,6 +78,10 @@ img {
   animation-fill-mode: forwards;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 @keyframes help-button-color-change {
   0% {
     color: #212529;
