--- a/apps/front/src/app/create/create-folder/create-folder.component.html
+++ b/apps/front/src/app/create/create-folder/create-folder.component.html
@@ -47,10 +47,39 @@
       <hr>
     </div>
     <div>
+      <h3>Nest this folder within another folder</h3>
+      <p class="text-secondary">(Optional) Select the folder that this folder should be nested inside.</p>
+    </div>
+    <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="folders">
+      <p class="text-secondary" *ngIf="folders.length === 0">You currently do not have any folders.</p>
+      <div class="col-md-3 col-12" *ngFor="let folder of folders; let i = index;">
+        <div
+          class="card shadow-sm" role="button"
+          (click)="toggleFolderSelection(folder.id)"
+        >
+          <div class="card-body d-flex justify-content-between align-items-center fs-5">
+            <div class="fw-semibold set-name">
+              {{ folder.name }}
+            </div>
+            <input
+              class="form-check-input ms-2 rounded-circle"
+              type="checkbox"
+              value=""
+              [disabled]="createFolderForm.disabled"
+              [checked]="this.createFolderForm.controls.parentFolderId.value === folder.id"
+            >
+          </div>
+          <div class="card-footer mt-auto" [ngStyle]="{'background-color': folder.color}"></div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div>
       <h3>Add sets to this folder</h3>
-      <p class="text-secondary">Select which sets should be inside this folder.</p>
+      <p class="text-secondary">(Optional) Select which sets should be inside this folder.</p>
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="sets">
+      <p class="text-secondary" *ngIf="sets.length === 0">You currently do not have any sets.</p>
       <div class="col-md-3 col-12" *ngFor="let set of sets; let i = index;">
         <div
           class="card shadow-sm" role="button"
