--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -6,20 +6,19 @@
 
 <div class="py-4 sets" hidden #container>
   <div>
-    <div class="d-flex header">
+    <div class="header">
       <h2>
         <fa-icon class="fs-3" [icon]="faFolder"></fa-icon>
         Your folders
       </h2>
+      <p class="text-secondary me-3">Folders that are nested within another folder are not shown here.</p>
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100" *ngIf="user">
       <div class="col-md-3" [routerLink]="['/create/folder']">
         <div class="card shadow-sm set-card h-100" role="button">
-          <div class="card-body d-flex justify-content-center">
-            <p class="fs-5 mt-2 d-flex align-items-center">
-              <fa-icon class="fs-3" [icon]="faPlus"></fa-icon>
-              <span class="ms-1">Create new folder</span>
-            </p>
+          <div class="card-body d-flex justify-content-center align-items-center">
+            <fa-icon class="fs-3" [icon]="faPlus"></fa-icon>
+            <span class="ms-1 fs-5">Create new folder</span>
           </div>
         </div>
       </div>
@@ -44,11 +43,9 @@
     <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100" *ngIf="user">
       <div class="col-md-3" [routerLink]="['/create/set']">
         <div class="card shadow-sm set-card h-100" role="button">
-          <div class="card-body d-flex justify-content-center">
-            <p class="fs-5 mt-2 d-flex align-items-center">
-              <fa-icon class="fs-3" [icon]="faPlus"></fa-icon>
-              <span class="ms-1">Create new set</span>
-            </p>
+          <div class="card-body d-flex justify-content-center align-items-center">
+            <fa-icon class="fs-3" [icon]="faPlus"></fa-icon>
+            <span class="ms-1 fs-5">Create new set</span>
           </div>
         </div>
       </div>
