--- a/apps/front/src/app/folder/folder.component.html
+++ b/apps/front/src/app/folder/folder.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class="py-4 mx-md-5 mx-2" [hidden]="loading" #container>
+<div class="py-4 mx-md-5 mx-2" [hidden]="loading">
   <div class="d-flex gap-1 mb-n2" *ngIf="folderPath.length > 1">
     <p
       class="text-secondary"
@@ -18,25 +18,104 @@
       <span *ngIf="i + 1 !== folderPath.length"> /</span>
     </p>
   </div>
-  <h1 *ngIf="folder" class="fs-2">
-    <fa-icon [icon]="faFolder" [ngStyle]="{'color': folder.color}"></fa-icon>
-    {{folder.name}}
-  </h1>
-  <div class="mt-5">
+  <div class="d-flex justify-content-between">
+    <h1 *ngIf="folder" class="fs-1">
+      <fa-icon [icon]="faFolder" [ngStyle]="{'color': folder.color}"></fa-icon>
+      {{folder.name}}
+    </h1>
+    <div *ngIf="userIsAuthor">
+      <button type="button" class="btn btn-primary" *ngIf="!editing" (click)="edit()">
+        <fa-icon [icon]="faPencil"></fa-icon>
+        Edit
+      </button>
+      <button type="submit" class="btn btn-primary me-2" *ngIf="editing" [disabled]="saveInProgress" (click)="save()">
+        <span *ngIf="saveInProgress" class="spinner-border spinner-border-sm me-1" aria-hidden="true"></span>
+        <fa-icon [icon]="faSave"></fa-icon>
+        Save
+      </button>
+      <button type="submit" class="btn btn-secondary" *ngIf="editing" [disabled]="saveInProgress" (click)="view()">
+        <fa-icon [icon]="faCancel"></fa-icon>
+        Cancel
+      </button>
+    </div>
+  </div>
+  <p class="text-secondary text-wrap description">{{folder.description}}</p>
+  <form *ngIf="editing" [formGroup]="saveForm">
+    <div class="my-3">
+      <input type="text" class="form-control" placeholder="Enter a title for your folder..." maxlength="255" formControlName="name" required>
+      <div
+        class="form-text text-danger"
+        *ngIf="
+              !saveForm.controls.name.valid &&
+              !saveForm.disabled &&
+              (saveForm.controls.name.dirty || saveForm.controls.name.touched || saveInProgress)"
+      >
+        You must provide a title for your folder.
+      </div>
+      <div
+        class="form-text text-danger"
+        *ngIf="saveForm.errors?.['httpError']"
+      >
+        Something went wrong. Try again.
+      </div>
+    </div>
+    <div class="mb-3">
+      <textarea class="form-control" placeholder="Add a description..." formControlName="description"></textarea>
+    </div>
+    <div class="mb-3 d-flex align-items-center">
+      <input type="color" class="bg-white border-0 shadow-sm" id="colorPicker" formControlName="color">
+      <label for="colorPicker" class="ms-2 form-label pt-2">Select a color for the folder</label>
+    </div>
+    <div class="mb-2 form-check">
+      <input type="checkbox" class="form-check-input" id="privateCheck" formControlName="private">
+      <label class="form-check-label" for="privateCheck">Viewable only to me</label>
+    </div>
+  </form>
+  <div class="mt-4">
     <div class="d-flex">
       <h2>
         <fa-icon class="fs-3" [icon]="faFolderTree"></fa-icon>
         Subfolders
       </h2>
     </div>
-    <p class="text-secondary mt-3 mb-4" *ngIf="subfolders && subfolders.length === 0">There are no subfolders in this folder.</p>
-    <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-4" *ngIf="subfolders && subfolders.length > 0">
-      <div class="col-md-3" *ngFor="let folder of subfolders">
-        <div class="card shadow-sm set-card h-100" [routerLink]="['/folder', folder.id]" role="button">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">{{ folder.name }}</h5>
+    <div *ngIf="!editing">
+      <p class="text-secondary mt-3 mb-4" *ngIf="!editing && subfolders && subfolders.length === 0">There are no subfolders in this folder.</p>
+      <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-4" *ngIf="subfolders && subfolders.length > 0">
+        <div class="col-md-3" *ngFor="let folder of subfolders">
+          <div class="card shadow-sm set-card h-100" [routerLink]="['/folder', folder.id]" role="button">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">{{ folder.name }}</h5>
+            </div>
+            <div class="card-footer mt-auto" [ngStyle]="{'background-color': folder.color}"></div>
           </div>
-          <div class="card-footer mt-auto" [ngStyle]="{'background-color': folder.color}"></div>
+        </div>
+      </div>
+    </div>
+    <div *ngIf="editing">
+      <p class="mt-3 text-secondary" *ngIf="!editingLoading && userFolders.length === 0">You do not have any other folders other than this one.</p>
+      <div class="spinner-border text-primary" role="status" *ngIf="editingLoading">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="userFolders.length > 0">
+        <div class="col-md-3 col-12" *ngFor="let folder of userFolders; let i = index;">
+          <div
+            class="card shadow-sm" role="button"
+            (click)="toggleSubfolderSelection(folder.id)"
+          >
+            <div class="card-body d-flex justify-content-between align-items-center fs-5">
+              <div class="fw-semibold set-name">
+                {{ folder.name }}
+              </div>
+              <input
+                class="form-check-input ms-2"
+                type="checkbox"
+                value=""
+                [disabled]="saveForm.disabled"
+                [checked]="isSubfolderSelected(folder.id)"
+              >
+            </div>
+            <div class="card-footer mt-auto" [ngStyle]="{'background-color': folder.color}"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -49,21 +128,54 @@
         Sets
       </h2>
     </div>
-    <p class="text-secondary my-3" *ngIf="sets && sets.length === 0">There are no sets in this folder.</p>
-    <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-4" *ngIf="sets && sets.length > 0">
-      <div class="col-md-3" *ngFor="let set of sets">
-        <div class="card shadow-sm set-card h-100" [routerLink]="['/study-set', set.id]" role="button">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">
-              {{ set.title }}
-              <fa-icon
-                *ngIf="set.private"
-                [icon]="['far', 'eye-slash']"
-              ></fa-icon>
-            </h5>
+    <p class="text-secondary my-3" *ngIf="!editing && folderSets && folderSets.length === 0">There are no sets in this folder.</p>
+    <div *ngIf="!editing">
+      <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-4" *ngIf="folderSets && folderSets.length > 0">
+        <div class="col-md-3" *ngFor="let set of folderSets">
+          <div class="card shadow-sm set-card h-100" [routerLink]="['/study-set', set.id]" role="button">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">
+                {{ set.title }}
+                <fa-icon
+                  *ngIf="set.private"
+                  [icon]="['far', 'eye-slash']"
+                ></fa-icon>
+              </h5>
+            </div>
+            <div class="card-footer mt-auto">
+              <small class="text-body-secondary">Updated on {{ set.updatedAt.toLocaleString('en-us', { month:'short', day: 'numeric', year:'numeric'}) }}</small>
+            </div>
           </div>
-          <div class="card-footer mt-auto">
-            <small class="text-body-secondary">Updated on {{ set.updatedAt.toLocaleString('en-us', { month:'short', day: 'numeric', year:'numeric'}) }}</small>
+        </div>
+      </div>
+    </div>
+    <div *ngIf="editing">
+      <div class="spinner-border text-primary" role="status" *ngIf="editingLoading">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <p class="mt-3 text-secondary" *ngIf="!editingLoading && userSets.length === 0">You do not have any created sets.</p>
+      <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="userSets.length > 0">
+        <div class="col-md-3 col-12" *ngFor="let set of userSets; let i = index;">
+          <div
+            class="card shadow-sm" role="button"
+            (click)="toggleSetSelection(set.id)"
+          >
+            <div class="card-body d-flex justify-content-between align-items-center fs-5">
+              <div class="fw-semibold set-name">
+                {{ set.title }}
+                <fa-icon
+                  *ngIf="set.private"
+                  [icon]="['far', 'eye-slash']"
+                ></fa-icon>
+              </div>
+              <input
+                class="form-check-input ms-2"
+                type="checkbox"
+                value=""
+                [disabled]="saveForm.disabled"
+                [checked]="isSetSelected(set.id)"
+              >
+            </div>
           </div>
         </div>
       </div>
