--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -25,7 +25,13 @@
       <div class="col-md-3" *ngFor="let folder of user.folders">
         <div class="card shadow-sm set-card h-100" [routerLink]="['/folder', folder.id]" role="button">
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title">{{ folder.name }}</h5>
+            <h5 class="card-title">
+              {{ folder.name }}
+              <fa-icon
+                *ngIf="folder.private"
+                [icon]="['far', 'eye-slash']"
+              ></fa-icon>
+            </h5>
           </div>
           <div class="card-footer mt-auto" [ngStyle]="{'background-color': folder.color}"></div>
         </div>
