--- a/apps/front/src/app/create/create-folder/create-folder.component.html
+++ b/apps/front/src/app/create/create-folder/create-folder.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="createFolderForm" [hidden]="loading" (ngSubmit)="submit()">
   <div class="py-4 mx-md-5 mx-2">
     <div class="d-flex justify-content-between text-nowrap">
-      <h2>
+      <h1>
         <fa-icon [icon]="faFolderPlus"></fa-icon>
         Create a folder
-      </h2>
+      </h1>
       <div>
         <a href="/handbook/usage/creating-folders" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5 me-2"></fa-icon></a>
         <button type="submit" class="btn btn-primary" [disabled]="submitted">
@@ -47,18 +47,21 @@
       <hr>
     </div>
     <div>
-      <h3>Nest this folder within another folder</h3>
-      <p class="text-secondary">(Optional) Select the folder that this folder should be nested inside.</p>
+      <h2>
+        <fa-icon class="fs-3" [icon]="faArrowUp"></fa-icon>
+        Parent Folder
+      </h2>
+      <p>Select the folder that this folder should be nested inside.</p>
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="folders">
       <p class="text-secondary" *ngIf="folders.length === 0">You currently do not have any folders.</p>
       <div class="col-md-3 col-12" *ngFor="let folder of folders; let i = index;">
         <div
           class="card shadow-sm" role="button"
-          (click)="toggleFolderSelection(folder.id)"
+          (click)="toggleParentFolderSelection(folder.id)"
         >
           <div class="card-body d-flex justify-content-between align-items-center fs-5">
-            <div class="fw-semibold set-name">
+            <div class="fw-semibold card-name">
               {{ folder.name }}
             </div>
             <input
@@ -75,8 +78,42 @@
     </div>
     <hr>
     <div>
-      <h3>Add sets to this folder</h3>
-      <p class="text-secondary">(Optional) Select which sets should be inside this folder.</p>
+      <h2>
+        <fa-icon class="fs-3" [icon]="faFolderTree"></fa-icon>
+        Subfolders
+      </h2>
+      <p>Select the folders that should be nested within this folder.</p>
+    </div>
+    <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="folders">
+      <p class="text-secondary" *ngIf="folders.length === 0">You currently do not have any folders.</p>
+      <div class="col-md-3 col-12" *ngFor="let folder of folders; let i = index;">
+        <div
+          class="card shadow-sm" role="button"
+          (click)="toggleSubfolderSelection(folder.id)"
+        >
+          <div class="card-body d-flex justify-content-between align-items-center fs-5">
+            <div class="fw-semibold card-name">
+              {{ folder.name }}
+            </div>
+            <input
+              class="form-check-input ms-2"
+              type="checkbox"
+              value=""
+              [disabled]="createFolderForm.disabled"
+              [checked]="isSubfolderSelected(folder.id)"
+            >
+          </div>
+          <div class="card-footer mt-auto" [ngStyle]="{'background-color': folder.color}"></div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div>
+      <h2>
+        <fa-icon class="fs-3" [icon]="faClone"></fa-icon>
+        Sets
+      </h2>
+      <p>Select which sets should be inside this folder.</p>
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="sets">
       <p class="text-secondary" *ngIf="sets.length === 0">You currently do not have any sets.</p>
@@ -86,7 +123,7 @@
           (click)="toggleSetSelection(set.id)"
         >
           <div class="card-body d-flex justify-content-between align-items-center fs-5">
-            <div class="fw-semibold set-name">
+            <div class="fw-semibold card-name">
               {{ set.title }}
               <fa-icon
                 *ngIf="set.private"
