--- a/apps/front/src/app/folder/folder.component.html
+++ b/apps/front/src/app/folder/folder.component.html
@@ -40,9 +40,12 @@
     </div>
   </div>
   <p class="text-secondary text-wrap description">{{folder.description}}</p>
-  <form *ngIf="editing" [formGroup]="saveForm">
+  <div class="spinner-border text-primary" role="status" *ngIf="editingLoading">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <form *ngIf="editing && !editingLoading" [formGroup]="saveForm">
     <div class="my-3">
-      <input type="text" class="form-control" placeholder="Enter a title for your folder..." maxlength="255" formControlName="name" required>
+      <input type="text" class="form-control mt-4" placeholder="Enter a title for your folder..." maxlength="255" formControlName="name" required>
       <div
         class="form-text text-danger"
         *ngIf="
@@ -71,12 +74,47 @@
       <label class="form-check-label" for="privateCheck">Viewable only to me</label>
     </div>
   </form>
+  <div class="mt-4" *ngIf="editing">
+    <hr>
+    <div>
+      <h2>
+        <fa-icon class="fs-3" [icon]="faArrowUp"></fa-icon>
+        Parent Folder
+      </h2>
+      <p *ngIf="editing">Select the folder that this folder should be nested inside.</p>
+      <div class="row row-cols-1 row-cols-md-4 g-4 pb-4 pt-2" *ngIf="userFolders">
+        <p class="text-secondary" *ngIf="userFolders.length === 0">You currently do not have any folders.</p>
+        <div class="col-md-3 col-12" *ngFor="let folder of userFolders; let i = index;">
+          <div
+            class="card shadow-sm" role="button"
+            (click)="toggleParentFolderSelection(folder.id)"
+          >
+            <div class="card-body d-flex justify-content-between align-items-center fs-5">
+              <div class="fw-semibold card-name">
+                {{ folder.name }}
+              </div>
+              <input
+                class="form-check-input ms-2 rounded-circle"
+                type="checkbox"
+                value=""
+                [disabled]="saveForm.disabled"
+                [checked]="this.saveForm.controls.parentFolderId.value === folder.id"
+              >
+            </div>
+            <div class="card-footer mt-auto" [ngStyle]="{'background-color': folder.color}"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="mt-4">
-    <div class="d-flex">
+    <hr *ngIf="editing">
+    <div>
       <h2>
         <fa-icon class="fs-3" [icon]="faFolderTree"></fa-icon>
         Subfolders
       </h2>
+      <p *ngIf="editing">Select the folders that should be nested within this folder.</p>
     </div>
     <div *ngIf="!editing">
       <p class="text-secondary mt-3 mb-4" *ngIf="!editing && subfolders && subfolders.length === 0">There are no subfolders in this folder.</p>
@@ -103,7 +141,7 @@
             (click)="toggleSubfolderSelection(folder.id)"
           >
             <div class="card-body d-flex justify-content-between align-items-center fs-5">
-              <div class="fw-semibold set-name">
+              <div class="fw-semibold card-name">
                 {{ folder.name }}
               </div>
               <input
@@ -120,13 +158,14 @@
       </div>
     </div>
   </div>
-  <hr class="me-4">
+  <hr>
   <div class="mt-4">
-    <div class="d-flex">
+    <div>
       <h2>
         <fa-icon class="fs-3" [icon]="faClone"></fa-icon>
         Sets
       </h2>
+      <p *ngIf="editing">Select the sets that should be nested within this folder.</p>
     </div>
     <p class="text-secondary my-3" *ngIf="!editing && folderSets && folderSets.length === 0">There are no sets in this folder.</p>
     <div *ngIf="!editing">
@@ -161,7 +200,7 @@
             (click)="toggleSetSelection(set.id)"
           >
             <div class="card-body d-flex justify-content-between align-items-center fs-5">
-              <div class="fw-semibold set-name">
+              <div class="fw-semibold card-name">
                 {{ set.title }}
                 <fa-icon
                   *ngIf="set.private"
