--- a/apps/front/src/app/folder/folder.component.scss
+++ b/apps/front/src/app/folder/folder.component.scss
@@ -10,3 +10,16 @@
 .description {
   overflow-wrap: break-word;
 }
+
+card > .form-check-input:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+card > .form-check-input {
+  cursor: pointer;
+}
+
+.card-name {
+  width: 85%;
+}
