--- a/apps/front/src/app/folder/folder.component.html
+++ b/apps/front/src/app/folder/folder.component.html
@@ -1,10 +1,10 @@
-<div class="d-flex justify-content-center mt-5" #spinner>
+<div class="d-flex justify-content-center mt-5" *ngIf="loading">
   <div class="loading-spinner spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
-<div class="py-4 mx-md-5 mx-2" [hidden]="loading">
+<div class="py-4 mx-md-5 mx-2" [hidden]="loading" *ngIf="folder">
   <div class="d-flex gap-1 mb-n2" *ngIf="folderPath.length > 1">
     <p
       class="text-secondary"
@@ -18,16 +18,32 @@
       <span *ngIf="i + 1 !== folderPath.length"> /</span>
     </p>
   </div>
-  <div class="d-flex justify-content-between">
-    <h1 *ngIf="folder" class="fs-1">
-      <fa-icon [icon]="faFolder" [ngStyle]="{'color': folder.color}"></fa-icon>
-      {{folder.name}}
-    </h1>
-    <div *ngIf="userIsAuthor">
+  <div class="d-flex row row-cols-md-2 row-cols-sm-1 justify-content-between">
+    <div class="col-12">
+      <h1 class="fs-1">
+        <fa-icon [icon]="faFolder" [ngStyle]="{'color': folder.color}"></fa-icon>
+        {{folder.name}}
+      </h1>
+    </div>
+    <div *ngIf="userIsAuthor" class="d-flex col-12 justify-content-md-end justify-content-sm-start align-items-start">
       <button type="button" class="btn btn-primary" *ngIf="!editing" (click)="edit()">
         <fa-icon [icon]="faPencil"></fa-icon>
         Edit
       </button>
+      <div class="d-flex" *ngIf="editing">
+        <button type="button" class="btn btn-danger me-2" *ngIf="deleteClicked" (click)="delete()">
+          <fa-icon [icon]="faTrashCan"></fa-icon>
+          Confirm
+        </button>
+        <button type="button" class="btn btn-outline-secondary me-2" *ngIf="deleteClicked" (click)="deleteClicked = false;">
+          <fa-icon [icon]="faCancel"></fa-icon>
+          Cancel
+        </button>
+        <button type="button" class="btn btn-danger me-2" (click)="deleteClicked = true;" *ngIf="!deleteClicked">
+          <fa-icon [icon]="faTrashCan"></fa-icon>
+          Delete
+        </button>
+      </div>
       <button type="submit" class="btn btn-primary me-2" *ngIf="editing" [disabled]="saveInProgress" (click)="save()">
         <span *ngIf="saveInProgress" class="spinner-border spinner-border-sm me-1" aria-hidden="true"></span>
         <fa-icon [icon]="faSave"></fa-icon>
