--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -11,7 +11,7 @@
         <fa-icon class="fs-3" [icon]="faFolder"></fa-icon>
         Your folders
       </h2>
-      <p class="text-secondary me-3">Folders that are nested within another folder are not shown here.</p>
+      <p class="text-secondary me-3">Subfolders are not shown here.</p>
     </div>
     <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100" *ngIf="user">
       <div class="col-md-3" [routerLink]="['/create/folder']">
