--- a/apps/front/src/app/profile/profile.component.html
+++ b/apps/front/src/app/profile/profile.component.html
@@ -14,10 +14,14 @@
     <p class="text-secondary fs-4 mt-4">Member since {{registrationDate}}</p>
   </div>
   <div class="mt-5 mb-4">
-    <p class="fs-3">Study sets</p>
-    <div *ngFor="let set of user.sets;">
-        <div class="mb-2 set-card" [routerLink]="['/study-set', set.id]">
-          <div class="card shadow-sm">
+    <h2>
+      <fa-icon class="fs-3" [icon]="faClone"></fa-icon>
+      Study sets
+    </h2>
+    <div class="row row-cols-1 row-cols-md-4 mt-3 g-4">
+      <div class="col-md-3" *ngFor="let set of user.sets;">
+        <div class="mb-2 h-100" [routerLink]="['/study-set', set.id]">
+          <div class="card shadow-sm h-100">
             <div class="card-body">
               <h5 class="card-title">{{set.title}} <fa-icon *ngIf="set.private" [icon]="['far', 'eye-slash']"></fa-icon></h5>
             </div>
@@ -26,6 +30,25 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-5 mb-4">
+    <h2>
+      <fa-icon class="fs-3" [icon]="faFolder"></fa-icon>
+      Folders
+    </h2>
+    <div class="row row-cols-1 row-cols-md-4 mt-3 g-4">
+      <div class="col-md-3" *ngFor="let folder of user.folders;">
+        <div class="mb-2 h-100" [routerLink]="['/folder', folder.id]">
+          <div class="card shadow-sm h-100">
+            <div class="card-body">
+              <h5 class="card-title">{{folder.name}} <fa-icon *ngIf="folder.private" [icon]="['far', 'eye-slash']"></fa-icon></h5>
+            </div>
+            <div class="card-footer mt-auto" [ngStyle]="{'background-color': folder.color}"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
