feat(api + front): update packages, add new rate limiting

--- a/apps/front/src/app/header/forgot-password-modal/forgot-password-modal.component.html
+++ b/apps/front/src/app/header/forgot-password-modal/forgot-password-modal.component.html
@@ -12,8 +12,8 @@
         <label for="forgot-email" class="form-label">Email address</label>
         <input [disabled]="clicked" type="email" class="form-control" id="forgot-email" name="email" ngModel required>
         <div *ngIf="response === ApiResponseOptions.Success" class="form-text text-success">If that email exists, we've sent a reset message.</div>
-        <div *ngIf="response === ApiResponseOptions.Fail" class="form-text text-success">Something went wrong.</div>
-        <div *ngIf="response === ApiResponseOptions.Ratelimit" class="form-text text-success">You are being rate limited.</div>
+        <div *ngIf="response === ApiResponseOptions.Fail" class="form-text text-danger">Something went wrong.</div>
+        <div *ngIf="response === ApiResponseOptions.Ratelimit" class="form-text text-danger">You are being rate limited.</div>
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary" [disabled]="clicked">Send password reset</button>
