chore(front): update readme and landing page to reflect new changes

--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -118,7 +118,7 @@
         <div class="row justify-content-center align-items-center mt-4">
           <div class="col-lg-5 order-sm-1 order-1 order-xl-0 order-lg-0">
             <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Feature-rich card editor</h3>
-            <p class="fs-5">Each side of a card can be customized to your heart's content. Add multiple images, change the formatting of text, use code blocks, and much more.</p>
+            <p class="fs-5">Each side of a card can be customized to your heart's content. Add multiple images, change the formatting of text, add LaTeX expressions, use code blocks, and much more.</p>
           </div>
           <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
             <img src="assets/landing/section-3-feature-4.webp" class="section-3-feature-image shadow-sm">
@@ -136,8 +136,8 @@
         </div>
         <div class="row row-cols-1 row-cols-md-3 justify-content-center mt-4 gap-3">
           <div class="col col-md-3 bg-white rounded shadow-sm py-3">
-            <h4 class="fs-2 fw-semibold">LaTex Support</h4>
-            <p class="fs-5">Use LaTex code to create beautiful mathematical expressions in your cards.</p>
+            <h4 class="fs-2 fw-semibold">User-accessible API</h4>
+            <p class="fs-5">Use the data in your sets in external applications, and create custom automations.</p>
           </div>
           <div class="col col-md-3 bg-white rounded shadow-sm py-3">
             <h4 class="fs-2 fw-semibold">Spaced Repetition</h4>
